--- a/työaika/MainWindow.xaml
+++ b/työaika/MainWindow.xaml
@@ -61,23 +61,23 @@ Title="Työajanseuranta" Height="750" Width="1150" Loaded="Window_Loaded" >
             </TabItem>
             <TabItem Header="Raportti">
                 <Grid>
-                    <ListView HorizontalAlignment="Left" Height="340" Margin="10,10,0,0" VerticalAlignment="Top" Width="1116" Grid.ColumnSpan="3">
+                    <ListView x:Name="listViewRaportti" HorizontalAlignment="Left" Height="340" Margin="10,10,0,0" VerticalAlignment="Top" Width="1116" Grid.ColumnSpan="2" Loaded="listViewRaportti_Loaded">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header=" Päivämäärä "/>
-                                <GridViewColumn Header=" Tehtävä "/>
-                                <GridViewColumn Header=" Kohde "/>
-                                <GridViewColumn Header=" Tunnit "/>
-                                <GridViewColumn Header=" Vapaateksti "/>
+                                <GridViewColumn Header=" Päivämäärä " DisplayMemberBinding="{Binding Paivamaara}"/>
+                                <GridViewColumn Header=" Tehtävä " DisplayMemberBinding="{Binding TehtavaRaportti}"/>
+                                <GridViewColumn Header=" Kohde " DisplayMemberBinding="{Binding KohdeRaportti}"/>
+                                <GridViewColumn Header=" Tunnit " DisplayMemberBinding="{Binding TunnitRaportti}"/>
+                                <GridViewColumn Header=" Vapaateksti " DisplayMemberBinding="{Binding VapaatekstiRaportti}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button x:Name="bntHae" Content="Hae" HorizontalAlignment="Left" Margin="47,600,0,0" VerticalAlignment="Top" Width="75" Click="bntHae_Click"/>
-                    <Button x:Name="btnRaportti" Content="Raportti" HorizontalAlignment="Left" Margin="200,600,0,0" VerticalAlignment="Top" Width="75" Click="btnRaportti_Click"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="44,379,0,0" TextWrapping="Wrap" Text="Alkupäivämäärä" VerticalAlignment="Top"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="44,459,0,0" TextWrapping="Wrap" Text="Päättymispäivämäärä" VerticalAlignment="Top"/>
-                    <DatePicker x:Name="datePickerHaeAlku" HorizontalAlignment="Left" Margin="44,400,0,0" VerticalAlignment="Top" Width="158"/>
-                    <DatePicker x:Name="datePickerHaeLoppu" HorizontalAlignment="Left" Margin="44,480,0,0" VerticalAlignment="Top" Width="158"/>
+                    <Button x:Name="bntHae" Content="Hae" HorizontalAlignment="Left" Margin="33,600,0,0" VerticalAlignment="Top" Width="75" Click="bntHae_Click" Grid.Column="1"/>
+                    <Button x:Name="btnRaportti" Content="Raportti" HorizontalAlignment="Left" Margin="186,600,0,0" VerticalAlignment="Top" Width="75" Click="btnRaportti_Click" Grid.Column="1"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="30,379,0,0" TextWrapping="Wrap" Text="Alkupäivämäärä" VerticalAlignment="Top" Grid.Column="1"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="30,459,0,0" TextWrapping="Wrap" Text="Päättymispäivämäärä" VerticalAlignment="Top" Grid.Column="1"/>
+                    <DatePicker x:Name="datePickerHaeAlku" HorizontalAlignment="Left" Margin="30,400,0,0" VerticalAlignment="Top" Width="158" Grid.Column="1"/>
+                    <DatePicker x:Name="datePickerHaeLoppu" HorizontalAlignment="Left" Margin="30,480,0,0" VerticalAlignment="Top" Width="158" Grid.Column="1"/>
                 </Grid>
             </TabItem>
 
