--- a/työaika/MainWindow.xaml
+++ b/työaika/MainWindow.xaml
@@ -6,18 +6,8 @@ xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 xmlns:local="clr-namespace:työaika"
 mc:Ignorable="d"
 Title="Työajanseuranta" Height="750" Width="1150" Loaded="Window_Loaded" >
-    <Window.BorderBrush>
-        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="Black" Offset="0"/>
-            <GradientStop Color="Black" Offset="1"/>
-        </LinearGradientBrush>
-    </Window.BorderBrush>
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="66*"/>
-            <ColumnDefinition Width="505*"/>
-        </Grid.ColumnDefinitions>
         <TabControl HorizontalAlignment="Left" Height="721" VerticalAlignment="Top" Width="1144" Background="#FFE5E5E5" Grid.ColumnSpan="2" Margin="0,0,-2,-2">
             <TabItem Header="Työaika">
                 <Grid Background="#FFE5E5E5">
@@ -61,17 +51,15 @@ Title="Työajanseuranta" Height="750" Width="1150" Loaded="Window_Loaded" >
             </TabItem>
             <TabItem Header="Raportti">
                 <Grid>
-                    <ListView x:Name="listViewRaportti" HorizontalAlignment="Left" Height="340" Margin="10,10,0,0" VerticalAlignment="Top" Width="1116" Grid.ColumnSpan="2" Loaded="listViewRaportti_Loaded" SelectionChanged="listViewRaportti_SelectionChanged">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header=" Päivämäärä " DisplayMemberBinding="{Binding Paivamaara}"/>
-                                <GridViewColumn Header=" Tehtävä " DisplayMemberBinding="{Binding TehtavaRaportti}"/>
-                                <GridViewColumn Header=" Kohde " DisplayMemberBinding="{Binding KohdeRaportti}"/>
-                                <GridViewColumn Header=" Tunnit " DisplayMemberBinding="{Binding TunnitRaportti}"/>
-                                <GridViewColumn Header=" Vapaateksti " DisplayMemberBinding="{Binding VapaatekstiRaportti}"/>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
+                    <DataGrid x:Name="gridViewRaportti" HorizontalAlignment="Left" Height="228" Margin="10,10,0,0" VerticalAlignment="Top" Width="1116">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header=" Päivämäärä "/>
+                            <DataGridTextColumn Header=" Tehtävä "/>
+                            <DataGridTextColumn Header=" Kohde "/>
+                            <DataGridTextColumn Header=" Tunnit "/>
+                            <DataGridTextColumn Header=" Vapaateksti "/>
+                        </DataGrid.Columns>
+                    </DataGrid>
                     <Button x:Name="bntHae" Content="Hae" HorizontalAlignment="Left" Margin="33,600,0,0" VerticalAlignment="Top" Width="75" Click="bntHae_Click" Grid.Column="1"/>
                     <Button x:Name="btnRaportti" Content="Raportti" HorizontalAlignment="Left" Margin="186,600,0,0" VerticalAlignment="Top" Width="75" Click="btnRaportti_Click" Grid.Column="1"/>
                     <TextBlock HorizontalAlignment="Left" Margin="30,379,0,0" TextWrapping="Wrap" Text="Alkupäivämäärä" VerticalAlignment="Top" Grid.Column="1"/>
