--- a/työaika/MainWindow.xaml
+++ b/työaika/MainWindow.xaml
@@ -5,12 +5,12 @@ xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 xmlns:local="clr-namespace:työaika"
 mc:Ignorable="d"
-Title="Työajanseuranta" Height="750" Width="1150" Loaded="Window_Loaded" >
+Title="Työajanseuranta" Height="747" Width="1150" Loaded="Window_Loaded" >
 
-    <Grid>
+    <Grid Margin="0,10,0,-10">
 
         <TextBlock x:Name="textblockKayttaja" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,0,0"  Text="Käyttäjätunnus" Width="158" Height="16"   />
-        <TabControl Margin="0,40,0,0"  Background="#FFE5E5E5" Grid.ColumnSpan="3" >
+        <TabControl Margin="0,0,0,10"  Background="#FFE5E5E5" >
 
             <TabItem Header="Työaika">
                 <Grid Background="#FFE5E5E5">
@@ -61,7 +61,7 @@ Title="Työajanseuranta" Height="750" Width="1150" Loaded="Window_Loaded" >
                     <ListView x:Name="listViewRaportti" HorizontalAlignment="Left" Height="228" Margin="10,10,0,0" VerticalAlignment="Top" Width="1116" Grid.ColumnSpan="3">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header=" Päivämäärä " DisplayMemberBinding="{Binding Pvm}"/>
+                                <GridViewColumn Header=" Päivämäärä " DisplayMemberBinding="{Binding stringPvm}"/>
                                 <GridViewColumn Header=" Tehtävä " DisplayMemberBinding="{Binding Tehtava}"/>
                                 <GridViewColumn Header=" Kohde " DisplayMemberBinding="{Binding Kohde}"/>
                                 <GridViewColumn Header=" Tunnit " DisplayMemberBinding="{Binding Tunnit}"/>
@@ -78,10 +78,8 @@ Title="Työajanseuranta" Height="750" Width="1150" Loaded="Window_Loaded" >
                 </Grid>
             </TabItem>
 
-            <TabItem Header="Asetukset">
-
+            <TabItem Header="Asetukset" x:Name="tabAsetukset">
                 <Grid>
-                    
                     <ListView x:Name="listViewTehtavat" HorizontalAlignment="Left" Height="363" Margin="100.585,53,0,0" VerticalAlignment="Top" Width="234" SelectionChanged="listViewTehtavat_SelectionChanged" Grid.Column="1" >
                         <ListView.View>
                             <GridView>
