--- a/työaika/MainWindow.xaml
+++ b/työaika/MainWindow.xaml
@@ -22,8 +22,12 @@ Title="Työajanseuranta" Height="747" Width="1150" Loaded="Window_Loaded" >
                         <ColumnDefinition Width="17*"/>
                         <ColumnDefinition Width="124*"/>
                     </Grid.ColumnDefinitions>
-                    <ComboBox x:Name="comboBoxKohde" HorizontalAlignment="Left" Margin="44,336,0,0" VerticalAlignment="Top" Width="158" Grid.ColumnSpan="3">
-                    </ComboBox>
+                    <DatePicker x:Name="datePickerPaivamaara" HorizontalAlignment="Left" Margin="44,280,0,0" VerticalAlignment="Top" Width="158" Grid.ColumnSpan="3" FirstDayOfWeek="Monday"/>
+                    <ComboBox x:Name="comboBoxTehtava" HorizontalAlignment="Left" Margin="123,281,0,0" VerticalAlignment="Top" Width="158" Grid.Column="2" />
+                    <ComboBox x:Name="comboBoxKohde" HorizontalAlignment="Left" Margin="44,336,0,0" VerticalAlignment="Top" Width="158" Grid.ColumnSpan="3"/>
+                    <ComboBox x:Name="comboBoxTunnit" HorizontalAlignment="Left" Margin="123,336,0,0" VerticalAlignment="Top" Width="158" Grid.Column="2"/>
+                    <TextBox x:Name="textBoxVapaateksti" HorizontalAlignment="Left" Height="47" Margin="44,416,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="366" AcceptsReturn="True" Grid.ColumnSpan="3" MaxLength="50" />
+
                     <ListView x:Name="listViewRivi" HorizontalAlignment="Left" Height="228" Margin="10,26,0,0" VerticalAlignment="Top" Width="1116" Grid.ColumnSpan="6" 
                               ItemsSource="{Binding Path=tyoaika, UpdateSourceTrigger=PropertyChanged}">
                         <ListView.View>
@@ -38,16 +42,12 @@ Title="Työajanseuranta" Height="747" Width="1150" Loaded="Window_Loaded" >
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button x:Name="btnRiviLaheta" Content="Lähetä" HorizontalAlignment="Left" Margin="685,608,0,0" VerticalAlignment="Top" Width="86" Height="32" Click="btnRiviLaheta_Click" Grid.Column="2"/>
-                    <Button x:Name="btnRiviTyhjenna" Content="Tyhjennä" HorizontalAlignment="Left" Margin="18,608,0,0" VerticalAlignment="Top" Width="86" Height="32" Click="btnRiviTyhjenna_Click" Grid.Column="3" Grid.ColumnSpan="3"/>
                     <Button x:Name="btnRiviLisaa" Content="Lisää" HorizontalAlignment="Left" Margin="44,608,0,0" VerticalAlignment="Top" Width="75" Height="32" Click="btnRiviLisaa_Click" Grid.ColumnSpan="2"/>
                     <Button x:Name="btnRiviPoista" Content="Poista" HorizontalAlignment="Left" Margin="273,608,0,0" VerticalAlignment="Top" Width="76" Height="32" Click="btnRiviPoista_Click" Grid.Column="2"/>
-                    <ComboBox x:Name="comboBoxTehtava" HorizontalAlignment="Left" Margin="123,281,0,0" VerticalAlignment="Top" Width="158" Grid.Column="2" />
+                    <Button x:Name="btnRiviLaheta" Content="Lähetä" HorizontalAlignment="Left" Margin="685,608,0,0" VerticalAlignment="Top" Width="86" Height="32" Click="btnRiviLaheta_Click" Grid.Column="2"/>
+                    <Button x:Name="btnRiviTyhjenna" Content="Tyhjennä" HorizontalAlignment="Left" Margin="18,608,0,0" VerticalAlignment="Top" Width="86" Height="32" Click="btnRiviTyhjenna_Click" Grid.Column="3" Grid.ColumnSpan="3"/>
 
-                    <ComboBox x:Name="comboBoxTunnit" HorizontalAlignment="Left" Margin="123,336,0,0" VerticalAlignment="Top" Width="158" Grid.Column="2" >
-                    </ComboBox>
-                    <TextBox x:Name="textBoxVapaateksti" HorizontalAlignment="Left" Height="171" Margin="44,399,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="434" AcceptsReturn="True" Grid.ColumnSpan="3" />
-                    <DatePicker x:Name="datePickerPaivamaara" HorizontalAlignment="Left" Margin="44,280,0,0" VerticalAlignment="Top" Width="158" Grid.ColumnSpan="3" FirstDayOfWeek="Monday"/>
+
                     <TextBlock HorizontalAlignment="Left" Margin="44,259,0,0" TextWrapping="Wrap" Text="Päivämäärä" VerticalAlignment="Top"/>
                     <TextBlock HorizontalAlignment="Left" Margin="123,259,0,0" TextWrapping="Wrap" Text="Tehtävä" VerticalAlignment="Top" Grid.Column="2"/>
                     <TextBlock HorizontalAlignment="Left" Margin="44,315,0,0" TextWrapping="Wrap" Text="Kohde" VerticalAlignment="Top"/>
@@ -69,12 +69,12 @@ Title="Työajanseuranta" Height="747" Width="1150" Loaded="Window_Loaded" >
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button x:Name="bntHae" Content="Hae" HorizontalAlignment="Left" Margin="33,600,0,0" VerticalAlignment="Top" Width="75" Click="bntHae_Click" Grid.Column="1"/>
-                    <Button x:Name="btnRaportti" Content="Raportti" HorizontalAlignment="Left" Margin="186,600,0,0" VerticalAlignment="Top" Width="75" Click="btnRaportti_Click" Grid.Column="1"/>
                     <TextBlock HorizontalAlignment="Left" Margin="30,379,0,0" TextWrapping="Wrap" Text="Alkupäivämäärä" VerticalAlignment="Top" Grid.Column="1"/>
                     <TextBlock HorizontalAlignment="Left" Margin="30,459,0,0" TextWrapping="Wrap" Text="Päättymispäivämäärä" VerticalAlignment="Top" Grid.Column="1"/>
                     <DatePicker x:Name="datePickerHaeAlku" HorizontalAlignment="Left" Margin="30,400,0,0" VerticalAlignment="Top" Width="158" Grid.Column="1"/>
                     <DatePicker x:Name="datePickerHaeLoppu" HorizontalAlignment="Left" Margin="30,480,0,0" VerticalAlignment="Top" Width="158" Grid.Column="1"/>
+                    <Button x:Name="bntHae" Content="Hae" HorizontalAlignment="Left" Margin="33,600,0,0" VerticalAlignment="Top" Width="75" Click="bntHae_Click" Grid.Column="1"/>
+                    <Button x:Name="btnRaportti" Content="Raportti" HorizontalAlignment="Left" Margin="186,600,0,0" VerticalAlignment="Top" Width="75" Click="btnRaportti_Click" Grid.Column="1"/>
                 </Grid>
             </TabItem>
 
@@ -97,12 +97,12 @@ Title="Työajanseuranta" Height="747" Width="1150" Loaded="Window_Loaded" >
                     </ListView>
                     <TextBlock HorizontalAlignment="Left" Margin="100.585,503,0,0" TextWrapping="Wrap" Text="Lisää tehtävä" VerticalAlignment="Top" Grid.Column="1"/>
                     <TextBlock HorizontalAlignment="Left" Margin="493.585,506,0,0" TextWrapping="Wrap" Text="Lisää kohde" VerticalAlignment="Top" Grid.Column="1"/>
-                    <TextBox x:Name="textBoxTehtava" Height="23" TextWrapping="Wrap" Margin="101,531,780.667,98"/>
-                    <TextBox x:Name="textBoxKohde" Height="23" TextWrapping="Wrap" Margin="494,531,379.667,98"/>
+                    <TextBox x:Name="textBoxTehtava" Height="23" TextWrapping="Wrap" Margin="101,531,780.667,98" MaxLength="30" />
+                    <TextBox x:Name="textBoxKohde" Height="23" TextWrapping="Wrap" Margin="494,531,379.667,98" MaxLength="30" />
                     <Button x:Name="btnTehtavaLisaa" Content="Lisää" HorizontalAlignment="Left" Margin="100.585,604,0,0" VerticalAlignment="Top" Width="75" Click="Button_TehtavaLisaa" Grid.Column="1"/>
-                    <Button x:Name="btnTehtavaPoista" Content="Poista" HorizontalAlignment="Left" Margin="259.585,604,0,0" VerticalAlignment="Top" Width="75" Click="btnTehtavaPoista_Click" Grid.Column="1"/>
+                    <Button x:Name="btnTehtavaPoista" Content="Poista" HorizontalAlignment="Left" Margin="280,604,0,0" VerticalAlignment="Top" Width="75" Click="btnTehtavaPoista_Click"/>
                     <Button x:Name="btnKohdeLisaa" Content="Lisää" HorizontalAlignment="Left" Margin="493.585,599,0,0" VerticalAlignment="Top" Width="75" Click="btnKohdeLisaa_Click" Grid.Column="1"/>
-                    <Button x:Name="btnKohdePoista" Content="Poista" HorizontalAlignment="Left" Margin="651.585,599,0,0" VerticalAlignment="Top" Width="75" Click="btnKohdePoista_Click" Grid.Column="1"/>
+                    <Button x:Name="btnKohdePoista" Content="Poista" HorizontalAlignment="Left" Margin="681,599,0,0" VerticalAlignment="Top" Width="75" Click="btnKohdePoista_Click"/>
                 </Grid>
             </TabItem>
         </TabControl>
